# indidus-relay-signaling

./: .gitignore  Cargo.toml  Cross.toml  PoW.md  README.md  SECURITY.md  config.local.toml
.github/workflows/: ci.yml
assets/: README.md  index.html  indidus_wasm_share_client.d.ts  indidus_wasm_share_client.js  indidus_wasm_share_client_bg.wasm  indidus_wasm_share_client_bg.wasm.d.ts  package.json
benches/: auth_bench.rs  endpoint_bench.rs  pow_bench.rs  relay_bench.rs  signaling_bench.rs
crates/indidus-relay-proto/: Cargo.toml  build.rs
crates/indidus-relay-proto/proto/: relay.proto  signaling.proto
crates/indidus-relay-proto/src/: lib.rs
deploy/: DOCKER.md  Dockerfile  INSTALL.md  bootstrap.sh  cleanup.sh  entrypoint.sh
examples/: gen_test_share.rs  relay_client.rs  test_e2e_v4.rs
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  proto.rs  server.rs  viewer.rs
src/audit/: mod.rs
src/auth/: mod.rs
src/devices/: mod.rs
src/friends/: mod.rs
src/mailbox/: mod.rs
src/models/: mod.rs  user.rs
src/pairing/: mod.rs
src/push/: mod.rs
src/relay/: mod.rs
src/signaling/: mod.rs
src/turn/: mod.rs
src/vaults/: mod.rs
tests/: auth_tests.rs  e2e.rs  error_state_tests.rs  gate_tests.rs  rate_limit_tests.rs  relay_tests.rs  signaling_tests.rs  social_tests.rs
tests/common/: mod.rs
