[package]
name = "indidus-relay-signaling"
version = "0.1.0"
edition = "2024"
description = "Comprehensive Relay & Signaling server for Indidus Password Manager"
authors = ["Indidus Team"]
license = "Apache-2.0"

[[bin]]
name = "indidus-relay-signaling"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "request-id"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
futures = "0.3"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Rate limiting
governor = { version = "0.6", features = ["jitter"] }
tower_governor = "0.4"
nonzero_ext = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# JWT and cryptography
jsonwebtoken = "9"
argon2 = "0.5"
ed25519-dalek = { version = "2.1", features = ["rand_core", "pkcs8"] }
sha2 = { version = "0.10", features = ["asm"] }
rust-embed = "8.3"
mime_guess = "2.0"
base64 = "0.22"
rand = "0.8"
spake2 = "0.4"
hmac = "0.12"
sha1 = "0.10"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
arc-swap = "1.7"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
async-trait = "0.1"

# Additional utilities
lazy_static = "1.5"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
fs2 = "0.4"
secrecy = { version = "0.8", features = ["serde"] }
zeroize = { version = "1.7", features = ["serde"] }
dashmap = "6.0"
mini-moka = "0.10"
mimalloc = { version = "0.1", default-features = false }
rayon = "1.10"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full", "test-util"] }
tempfile = "3"
tokio-test = "0.4"
tokio-tungstenite = "0.24"
aes-gcm = "0.10"
criterion = "0.5"

[[bench]]
name = "pow_bench"
harness = false

[[bench]]
name = "auth_bench"
harness = false

[[bench]]
name = "signaling_bench"
harness = false

[[bench]]
name = "relay_bench"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
